--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://RahafAl.gitlab.io/react-shoppingCart",
   "name": "test",
   "version": "0.1.0",
   "private": true,
@@ -23,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "main -d build"
   },
   "browserslist": {
     "production": [
