--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "main -d build"
+    "eject": "react-scripts eject"
   },
   "browserslist": {
     "production": [
