--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://rahafalasali.github.io/react-shoppingCart",
+  "homepage": "https://rahafalasali.github.io",
   "name": "react-shoppingCart",
   "version": "0.1.0",
   "private": true,
